Tue Feb  2 05:16:12 PST 1999 Manish Singh <yosh@gimp.org>

	* acinclude.m4
	* config.guess
	* config.sub
	* ltconfig
	* ltmain.sh: use CVS libtool 1.2e. Tell me what breaks.

	* pixmap/Makefile.am
	* metal/Makefile.am
	* notif/Makefile.am
	* redmond95/Makefile.am: use -module and -avoid-version flags

	* configure.in: minor clean ups

Wed Jan 27 21:14:54 PST 1999 Manish Singh <yosh@gimp.org>

	* acinclude.m4: new file, to go with libtool

	* ltmain.sh
	* ltconfig: better file magic regexp for Linux libs

Mon Jan 18 14:08:14 1999  Owen Taylor  <otaylor@redhat.com>

	* README:  Wrote one
	* AUTHORS: Added Randy Gordon

	* gtk-engines.spec: Up version number

Mon Jan 18 13:46:41 1999  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Up version for an 0.2 release.

Mon Jan 18 11:25:25 1999  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Remove -lgdk, -lgtk, and -lglib from GDK_IMLIB_LIBS.

	* redmond95/Makefile.am notif/Makefile.am metal/Makefile.am
	  pixmap/Makefile.am: Don't link to GTK_LIBS, since we 
	  want to use the main programs copy of GTK+.

	* */*_theme_main.c: Add a gtk_module_check_init() function to
	  check if we are compatible with the version of GTK+ of the
	  main executable. Removed some debugging printf's.
	
Wed Jan 13 16:30:45 PST 1999 Manish Singh <yosh@gimp.org>

	* ltconfig
	* ltmain.sh: House! Techno! Libtool! (do the 1.2d dance baby)

Sun Jan  3 14:13:28 PST 1999 Manish Singh <yosh@gimp.org>

	* configure.in: don't try to build static libs by default, it
	doesn't make much sense

	* redmond95/Makefile.am
	* notif/Makefile.am
	* metal/Makefile.am: don't link to $GDK_IMLIB_LIBS

Wed Dec 16 12:52:55 EST 1998 The Rasterman <raster@redhat.com>
	* removed win95 and Motif themes - replace with Notif and Redmond95 
	  - otherwise the same.

1998-11-07  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in: Unify all subdir `configure.in's here.

Mon Oct 19 12:11:28 1998  Owen Taylor  <otaylor@redhat.com>
