@@ -2,7 +2,7 @@ AC_INIT(README)
 # Save this value here, since automake will set cflags later
 cflags_set=${CFLAGS+set}
 
-AM_INIT_AUTOMAKE(gtk-engines, 0.2)
+AM_INIT_AUTOMAKE(gtk-engines, 0.4)
 
 dnl Initialize maintainer mode
 AM_MAINTAINER_MODE
