@@ -3,4 +3,4 @@ SUBDIRS = gtk
 themedir = $(datadir)/themes/Notif
 theme_DATA = ICON.png README.html  
 
-EXTRA_DIST = makemakefile.sh $(theme_DATA)
+EXTRA_DIST = $(theme_DATA)
