@@ -2,4 +2,4 @@ dummy =
 themedir = $(datadir)/themes/Notif/gtk
 theme_DATA = gtkrc  
 
-EXTRA_DIST = makemakefile.sh $(theme_DATA)
+EXTRA_DIST = $(theme_DATA)
