@@ -3,5 +3,5 @@ SUBDIRS = gtk
 themedir = $(datadir)/themes/Redmond95
 theme_DATA = ICON.png README.html  
 
-EXTRA_DIST = makemakefile.sh $(theme_DATA)
+EXTRA_DIST = $(theme_DATA)
 
