@@ -2,5 +2,5 @@ dummy =
 themedir = $(datadir)/themes/Redmond95/gtk
 theme_DATA = gtkrc  
 
-EXTRA_DIST = makemakefile.sh $(theme_DATA)
+EXTRA_DIST = $(theme_DATA)
 
